@@ -52,3 +52,6 @@ o make timeout backoffs randomized (a couple percent random) to spread traffic.
 o inspect date on executable, then warn user in log if its more than 1 year.
 o proactively prime root, stubs and trust anchors, feature.
   early failure, faster on first query, but more traffic.
+o look into whether in incoming message should have RRsets replaced with
+  rrsets from the cache, if the one from the cache is more trusted, or has
+  lower TTL.
