@@ -3,7 +3,7 @@
 forward-zone: name: "." forward-addr: 216.0.0.1
 CONFIG_END
 
-SCENARIO_BEGIN RRset TTL is updated from message.
+SCENARIO_BEGIN RRset TTL is not greedily updated from message.
 
 STEP 1 QUERY
 ENTRY_BEGIN
@@ -90,7 +90,6 @@ ENTRY_BEGIN
 	ns.example.com. IN A 10.20.30.50
 ENTRY_END
 
-
 ; original www.example.com query 
 STEP 10 QUERY
 ENTRY_BEGIN
@@ -98,9 +97,10 @@ ENTRY_BEGIN
 	SECTION QUESTION
 	www.example.com. IN A
 ENTRY_END
+
 ; immediate answer without an OUT_QUERY happening (checked on exit)
 ; also, the answer does not have AA set
-; NS rrset has been updated.
+; NS rrset has not been updated. No greedy TTL has happened.
 STEP 11 CHECK_ANSWER
 ENTRY_BEGIN
 	MATCH all ttl
@@ -110,7 +110,7 @@ ENTRY_BEGIN
 	SECTION ANSWER
 	www.example.com. IN A 10.20.30.40
 	SECTION AUTHORITY
-	example.com. 200 IN NS ns.example.com.
+	example.com. 100 IN NS ns.example.com.
 	SECTION ADDITIONAL
 	ns.example.com. IN A 10.20.30.50
 ENTRY_END
